# gobilda_final

./: README.md
final_project/: package.xml  robotix_mount.stl  setup.py
final_project/bringup/launch/: .gobilda.launch.py.swp  gobilda.launch.py
final_project/final_project/: comp_graph.txt  draw_square.py  teleop_twist_keyboard.py
gobilda_robot/: CMakeLists.txt  gobilda_robot.xml  package.xml
gobilda_robot/bringup/config/: gobilda_controllers.yaml
gobilda_robot/bringup/launch/: gobilda.launch.py
gobilda_robot/description/ros2_control/: gobilda.ros2_control.xacro
gobilda_robot/description/urdf/: gobilda.urdf.xacro  gobilda_description.urdf.xacro
gobilda_robot/hardware/include/gobilda_robot/: gobilda_system.hpp  motor.hpp
gobilda_robot/hardware/src/: gobilda_system.cpp  motor.cpp
project_one/: package.xml  setup.cfg  setup.py
project_one/launch/: .project_one_launch.py.swp  project_one_launch.py
project_one/project_one/: BumpAndGo.py
project_two/: package.xml  setup.cfg  setup.py
project_two/project_two/: README  simplemove.py
